/*
 * Copyright (C) 2017-2018 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package com.dremio.namespace;

option java_package = "com.dremio.namespace";
option java_outer_classname = "DatasetListingRPC";
option optimize_for = SPEED;
option java_generate_equals_and_hash = true;

import "remote_datastore.proto";

// request and response definitions of dataset listing service

message DLFindRequest { // DatasetListingService#find
  optional string username = 1;
  optional com.dremio.datastore.SearchRequest request = 2;
}

message DLFindResponse {
  repeated bytes response = 1; // TODO(DX-10857): change from opaque object to protobuf;
  optional string failureMessage = 2;
}